# darwin-notify

./: Cargo.toml  README.md  build.rs  notify.h
.github/workflows/: rust.yml
examples/: consoomer.rs  producer.rs
src/: lib.rs  sys.rs
