[package]
name = "darwin-notify"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SubconsciousCompute/darwin-notify/"
description = "Rust bindings for Darwin Notify API"
authors = ["David John <david@dafunk.net>", "Subconscious Compute"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
sys = []
tracing = ["dep:tracing"]

[dependencies]
block = "0.1.6"
tracing = { version = "0.1.37", optional = true }

[build-dependencies]
bindgen = "0.66.1"
